packages/svelte/tests/validator/samples/css-invalid-global-placement-6/input.svelte
<style>
	:global(div):first-child {
		color: red;
	}
	.foo:global(div):first-child {
		color: red;
	}
</style>
