packages/svelte/tests/compiler-errors/samples/css-global-modifier-start-2/main.svelte
<style>
	/* ok */
	div :global {
		&.x {
			color: red;
		}
	}
	div {
		:global {
			&.x {
				color: red;
			}
		}
	}

	/* not ok */
	:global {
		&.x {
			color: red;
		}
	}
</style>
